# Meerschaum

./: .dockerignore  .env  .gitignore  .pylintrc  .qovery.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  NOTICE  Pipfile  README.md  TODO.md  build.sh  changelog.md  config.sh  config.yaml  docker-compose.yaml  init.sh  liccheck.ini  meerschaum.spec  pyoxidizer.bzl  pyproject.toml  run.sh  setup.cfg  setup.py  todo.md  todo.txt  zensical.toml
.github/: FUNDING.yml
.github/workflows/: docker-build.yaml  pytest.yaml
__pyinstaller/: hook-meerschaum.config._paths.py  mrsm.spec
docs/: CNAME  README.md  mkdocs-old.yml  mkdocs.yml  plugins.md  zensical.toml
docs/mkdocs/: .pages  README.md  faq.md  getting-started.md  index.md  plugins.md
docs/overrides/: home.html
docs/site/: 404.html  index.html  sitemap.xml
docs/zensical/: .pages  faq.md  index.md  llms-full.txt  llms.txt
examples/apex/: apex.py
examples/weather/: weather.py
meerschaum/: README.md  __init__.py  __main__.py
meerschaum/Pipe/: _Pipe.py  (+12 more)
requirements/: api.txt  full.txt
scratch/: daemoniker.py  dashing_test.py  flame.py  pyro_client.py  pyro_server.py
scripts/: asciinema.sh  build.sh  check_tests.sh  clean.sh  config.sh  docs.sh  drivers.sh  gen_llms_txt.py  init.sh  mkdocs.sh  mrsm.sh  parse_yaml.sh  pdoc.sh  portable.sh  post_install.sh  push.sh  run.sh  setup.sh  snakeviz.sh  test.sh  thanks.sh  tuna.sh  venv.sh  working_dir.sh  zensical.sh
src/: lib.rs  setup.py
tests/: __init__.py  connectors.py  docker-compose.yaml  pipes.py  test_actions.py  test_arguments.py  test_cache.py  test_deduplicate.py  test_filter_existing.py  test_jobs.py  test_maintenance.py  test_partition.py  test_pipe_data.py  test_pipes.py  test_pipes_dtypes.py  test_plugins_scope.py  test_sql.py  test_sync.py  test_users.py  test_verify.py
(+724 files in other folders)
